syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.assign_1";
option java_outer_classname = "ProjectIsProto";
option objc_class_prefix = "PIS";

package com.assign_1;

// Define Service
service ProjectIs {
  // Request - Reply service
  rpc getCars (OwnersRequest) returns (Reply) {}
}

// The request message containing the user's ids.
message OwnersRequest {
    repeated int32 id = 4; 
}

// The response message containing Owners
message Reply{
    repeated O owners = 1;
}

// Message containing each of Reply's owners
message O{
    int32 id = 1;
    string name = 2;
    int32 telephone = 3;
    string address = 4;
    repeated C cars  = 5;
}

//Message containing each car of each Owner
message C{
    int32 id = 1;
    string brand = 2;
    string model = 3;
    int32 engine_size = 4;
    int32 power = 5;
    int32 consumption = 6;
    string plate=7;
}